; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_arc.c_arc_free_data_buf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_arc.c_arc_free_data_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARC_BUFC_METADATA = common dso_local global i64 0, align 8
@ARC_BUFC_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i8*)* @arc_free_data_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arc_free_data_buf(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @arc_buf_type(i32* %10)
  store i64 %11, i64* %9, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @arc_free_data_impl(i32* %12, i32 %13, i8* %14)
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @zio_buf_free(i8* %20, i32 %21)
  br label %32

23:                                               ; preds = %4
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* @ARC_BUFC_DATA, align 8
  %26 = icmp eq i64 %24, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @ASSERT(i32 %27)
  %29 = load i8*, i8** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @zio_data_buf_free(i8* %29, i32 %30)
  br label %32

32:                                               ; preds = %23, %19
  ret void
}

declare dso_local i64 @arc_buf_type(i32*) #1

declare dso_local i32 @arc_free_data_impl(i32*, i32, i8*) #1

declare dso_local i32 @zio_buf_free(i8*, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @zio_data_buf_free(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
